--- a/ElevenNote.WebMVC/Web.config
+++ b/ElevenNote.WebMVC/Web.config
@@ -10,8 +10,8 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ElevenNote.WebMVC-20181121110817.mdf;Initial Catalog=aspnet-ElevenNote.WebMVC-20181121110817;Integrated Security=True"
+   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ElevenNote.mdf;Initial Catalog=ElevenNote;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
